<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/promt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put_card"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloaddata"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/inputCardno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:editable="false"
        android:ems="10"
        android:hint="@string/inputcardno"
        android:inputType="text|number"
        android:selectAllOnFocus="false" />

    <Button
        android:id="@+id/getBusline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getBusline" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="333dp" >
    </ListView>

</LinearLayout>
